--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
 		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.1.6",
 		"@nestjs/jwt": "^11.0.0",
-		"@nestjs/mapped-types": "*",
+		"@nestjs/mapped-types": "^2.1.0",
 		"@nestjs/passport": "^11.0.5",
 		"@nestjs/platform-express": "^11.1.6",
 		"@nestjs/swagger": "^11.2.0",
-		"@prisma/client": "^6.15.0",
+		"@prisma/client": "^6.16.0",
 		"argon2": "^0.44.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"cookie-parser": "^1.4.7",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
-		"prisma": "^6.15.0",
+		"prisma": "^6.16.0",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.2"
 	},
@@ -56,7 +56,7 @@
 		"eslint": "^9.35.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
-		"globals": "^16.3.0",
+		"globals": "^16.4.0",
 		"jest": "^30.1.3",
 		"prettier": "^3.6.2",
 		"source-map-support": "^0.5.21",
@@ -66,7 +66,7 @@
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.42.0"
+		"typescript-eslint": "^8.43.0"
 	},
 	"jest": {
 		"moduleFileExtensions": [
