--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"seed:db": "ts-node src/infra/prisma/prisma.seed.ts"
 	},
 	"dependencies": {
+		"@nestjs/axios": "^4.0.1",
 		"@nestjs/common": "^11.1.6",
 		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.1.6",
