--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"cookie-parser": "^1.4.7",
+		"ip-cidr": "^4.0.2",
 		"nestjs-yookassa": "^1.1.28",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
