--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"seed:db": "ts-node src/infra/prisma/prisma.seed.ts"
 	},
 	"dependencies": {
+		"@nestjs-modules/mailer": "^2.0.2",
 		"@nestjs/axios": "^4.0.1",
 		"@nestjs/common": "^11.1.6",
 		"@nestjs/config": "^4.0.2",
@@ -30,7 +31,8 @@
 		"@nestjs/passport": "^11.0.5",
 		"@nestjs/platform-express": "^11.1.6",
 		"@nestjs/swagger": "^11.2.0",
-		"@prisma/client": "^6.16.1",
+		"@prisma/client": "^6.16.2",
+		"@react-email/components": "^0.5.3",
 		"argon2": "^0.44.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
@@ -39,37 +41,40 @@
 		"nestjs-yookassa": "^1.1.28",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
-		"prisma": "^6.16.1",
+		"prisma": "^6.16.2",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.35.0",
+		"@eslint/js": "^9.36.0",
 		"@nestjs/cli": "^11.0.10",
 		"@nestjs/schematics": "^11.0.7",
 		"@nestjs/testing": "^11.1.6",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
+		"@types/cookie-parser": "^1.4.9",
 		"@types/express": "^5.0.3",
 		"@types/jest": "^30.0.0",
-		"@types/node": "^22.18.1",
+		"@types/node": "^22.18.6",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/supertest": "^6.0.3",
-		"@types/cookie-parser": "^1.4.9",
-		"eslint": "^9.35.0",
+		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-prettier": "^5.5.4",
 		"globals": "^16.4.0",
 		"jest": "^30.1.3",
 		"prettier": "^3.6.2",
+		"react-email": "^4.2.11",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.1.4",
-		"ts-jest": "^29.4.1",
+		"ts-jest": "^29.4.4",
 		"ts-loader": "^9.5.4",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.43.0"
+		"typescript-eslint": "^8.44.0"
 	},
 	"jest": {
 		"moduleFileExtensions": [
