--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"cookie-parser": "^1.4.7",
+		"date-fns": "^4.1.0",
 		"ip-cidr": "^4.0.2",
 		"nestjs-yookassa": "^1.1.28",
 		"passport": "^0.7.0",
@@ -59,6 +60,8 @@
 		"@types/jest": "^30.0.0",
 		"@types/node": "^22.18.6",
 		"@types/passport-jwt": "^4.0.1",
+		"@types/react": "^19.1.13",
+		"@types/react-dom": "^19.1.9",
 		"@types/supertest": "^6.0.3",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
