--- a/compose.yml
+++ b/compose.yml
@@ -15,8 +15,24 @@ services:
         networks:
             - payment-backend
 
+    redis:
+        container_name: redis
+        image: redis:latest
+        restart: always
+        environment:
+            - REDIS_PORT=${REDIS_PORT}
+            - REDIS_PASSWORD=${REDIS_PASSWORD}
+        command: redis-server --requirepass ${REDIS_PASSWORD}
+        ports:
+            - ${REDIS_PORT}:6379
+        volumes:
+            - redis_data:/data
+        networks:
+            - payment-backend
+
 volumes:
     postgres_data:
+    redis_data:
 
 networks:
     payment-backend:
