--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@nestjs-modules/mailer": "^2.0.2",
 		"@nestjs/axios": "^4.0.1",
+		"@nestjs/bullmq": "^11.0.3",
 		"@nestjs/common": "^11.1.6",
 		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.1.6",
@@ -34,6 +35,7 @@
 		"@prisma/client": "^6.16.2",
 		"@react-email/components": "^0.5.3",
 		"argon2": "^0.44.0",
+		"bullmq": "^5.58.7",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"cookie-parser": "^1.4.7",
