--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@nestjs/mapped-types": "^2.1.0",
 		"@nestjs/passport": "^11.0.5",
 		"@nestjs/platform-express": "^11.1.6",
+		"@nestjs/schedule": "^6.0.1",
 		"@nestjs/swagger": "^11.2.0",
 		"@prisma/client": "^6.16.2",
 		"@react-email/components": "^0.5.3",
